<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.picmg</groupId>
    <artifactId>configurator</artifactId>
	<version>alpha</version>
    <properties>
      	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      	<maven.compiler.source>16</maven.compiler.source>
   	  	<maven.compiler.target>16</maven.compiler.target>
    </properties>
	<dependencies>
		<dependency>
	    	<groupId>org.openjfx</groupId>
	    	<artifactId>javafx-controls</artifactId>
	    	<version>16</version>
	  	</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>16</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>compile</scope>
		</dependency>
	</dependencies>
	<build>
		<!-- Unit test -->
		<testSourceDirectory>
			src/test
		</testSourceDirectory>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>16</release>
				</configuration>
			</plugin>
			<plugin>
	        	<groupId>org.openjfx</groupId>
	        	<artifactId>javafx-maven-plugin</artifactId>
	        	<version>0.0.4</version>
				<configuration>
	            	<mainClass>org.picmg.configurator.Main</mainClass>
					<compress>2</compress>
					<noHeaderFiles>true</noHeaderFiles>
					<stripDebug>true</stripDebug>
					<noManPages>true</noManPages>
					<launcher>configurator</launcher>
					<jlinkImageName>configurator</jlinkImageName>
					<jlinkZipName>configurator</jlinkZipName>
	        	</configuration>
	    	</plugin>
	    	<plugin>
	      		<!-- Build an executable JAR -->
	      		<groupId>org.apache.maven.plugins</groupId>
	      		<artifactId>maven-jar-plugin</artifactId>
	      		<version>3.1.0</version>
	      		<configuration>
	        		<archive>
	          			<manifest>
	            			<addClasspath>true</addClasspath>
	            			<mainClass>configurator/org.picmg.configurator.Main</mainClass>
	          			</manifest>
	        		</archive>
	      		</configuration>
	    	</plugin>
		</plugins>
	</build>
</project>